@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.679 2011/07/12 19:30:34 juhaszp Exp $
+C RCS $Id: gnuplot.doc,v 1.680 2011/07/14 21:29:41 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -868,7 +868,7 @@ C
 ^<tr>    <th>Function</th>    <th>Arguments</th>    <th>Returns</th></tr>
 ^</thead>
 ^<tbody>
-^<tr>    <td>column(x)</td>    <td>int</td>    <td> column <i>x</i> during datafile manipulation.</td></tr>
+^<tr>    <td>column(x)</td>    <td>int or string</td>    <td> contents of column <i>x</i> during data input.</td></tr>
 ^<tr>    <td>columnhead(x)</td>    <td>int</td>    <td> string containing first entry of column <i>x</i> in datafile.</td></tr>
 ^<tr>    <td>defined(X)</td>    <td>variable name</td>    <td> [DEPRECATED] returns 1 if X is defined, 0 otherwise.</td></tr>
 ^<tr>    <td>exists("X")</td>    <td>string</td>    <td> returns 1 if a variable named X is defined, 0 otherwise.</td></tr>
@@ -1404,8 +1404,8 @@ C marker below is used to signal this to doc2html:
 ?expressions functions column
 ?functions column
 ?column
-#column(x) & int & column $x$ during datafile manipulation. \\
-%column(x)@int@ column $x$ during datafile manipulation.
+#column(x) & int or string & column $x$ during datafile manipulation. \\
+%column(x)@int or string@ column $x$ during datafile manipulation.
  `column(x)` may be used only in expressions as part of `using` manipulations
  to fits or datafile plots.  It evaluates to the numerical value of the contents
  of column x. See `plot datafile using`.
@@ -5784,7 +5784,8 @@ C^ <img align=bottom src="http://www.gnuplot.info/doc/population.gif" alt="[popu
  but see `datafile separator`.
 
  Each <entry> may be a simple column number that selects the value from one
- field of the input file, an expression enclosed in parentheses, or a special
+ field of the input file, a string that matches a column label in the first 
+ line of a data set, an expression enclosed in parentheses, or a special
  function not enclosed in parentheses such as xticlabels(2).
 
  If the entry is an expression in parentheses, then the function column(N) may
@@ -5792,6 +5793,22 @@ C^ <img align=bottom src="http://www.gnuplot.info/doc/population.gif" alt="[popu
  first item read, column(2) to the second, and so on.  The special symbols
  $1, $2, ... are shorthand for column(1), column(2) ...  The function `valid(N)`
  tests whether the value in the Nth column is a valid number.
+=column
+=columnhead
+ If each column of data in the input file contains a label in the first row
+ rather than a data value, this label can be used to identify the column on
+ input and/or in the plot legend. The column() function can be used to select
+ an input column by label rather than by column number.  For example,
+ if the data file contains
+       Height    Weight    Age
+       val1      val1      val1
+       ...       ...       ...
+ then the following plot commands are all equivalent
+       plot 'datafile' using 3:1, '' using 3:2
+       plot 'datafile' using (column("Age")):(column(1)), \
+                    '' using (column("Age")):(column(2))
+       plot 'datafile' using "Age":"Height", '' using "Age":"Weight"
+ To use the column labels in the plot legend, use `set key autotitle columnhead`.
 
  In addition to the actual columns 1...N in the input data file, gnuplot
  presents data from several "pseudo-columns" that hold bookkeeping information.
@@ -5879,10 +5896,6 @@ C^ <img align=bottom src="http://www.gnuplot.info/doc/population.gif" alt="[popu
 
  However, if you want to leave text in your data files, it is safer to put the
  comment character (#) in the first column of the text lines.
-^ See also the web page
-^ <a href="http://www.gnuplot.info/demo/using.html">
- Feeble using demos.
-^ </a>
 5 pseudocolumns
 ?pseudocolumns
 ?commands plot datafile using pseudocolumns
